# aoos_fishcount

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
aoos_env/: pyvenv.cfg
aoos_env/Scripts/: activate  activate.bat
aoos_fishcount/: __init__.py  __main__.py
aoos_fishcount/inference/: __init__.py  counter.py  model.py  pipeline.py  tracker.py
aoos_fishcount/labeling/: __init__.py  app.py
aoos_fishcount/labeling/static/: labeling.js  style.css
aoos_fishcount/labeling/templates/: index.html
aoos_fishcount/power/: __init__.py  monitor.py
aoos_fishcount/sensors/: __init__.py  camera.py  environment.py  network.py  picamera2_capture.py
aoos_fishcount/utils/: __init__.py  config.py  database.py  logging.py  push.py
camera_control_UI/: camera_control.py  index.html
config/: default.yaml  deployment_template.yaml
docs/: index.md
docs/field/: validation_protocol.md
docs/hardware/: environmental_sensor.md  lens_focus_workflow.md  pvc_pole_build.md
docs/software/: installation.md  labeling.md  remote_access.md
scripts/: calibrate_line.py  deploy.sh  export_model.py  focus_check.py  health_check.py  install_coral.sh  push_summary.py  validate_counts.py
tests/: conftest.py
tests/unit/: test_config.py  test_counter.py  test_database.py  test_environment.py
